# Simple_OpenGL_Graphics_Engine

./: CMakeLists.txt  README.md
assets/models/: Volkswagen Beetle 1963.mtl
assets/scenes/: scene.xml
assets/scripts/: main.lua  rotate_y.lua
src/: Camera.cpp  Camera.h  EventBus.h  Frustum.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  Scene.h  SceneLoader.h  SceneNode.h  ScriptSystem.cpp  ScriptSystem.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h  main.cpp
src/Shaders/: basic.VS.glsl  light.FS.glsl  light.VS.glsl
